--- a/src/app/components/layout/home/home.component.css
+++ b/src/app/components/layout/home/home.component.css
@@ -3,7 +3,7 @@ main {
     margin: 0%;
     padding: 0%;
     display: grid;  
-    grid-template-columns: 1fr 1fr 1fr 1fr  1fr;
+    grid-template-columns: 1.5fr 1fr 1fr 1fr  1fr;
     grid-template-areas:
     "aside header  header  header  header"
     "aside  section section section section"
@@ -15,19 +15,19 @@ main {
 header { 
     grid-area: header; 
     background-color:#e8e8e8;
-    border: 1px solid royalblue;
+   
  }
 
 aside { 
     grid-area: aside; 
      background-color: #252525; 
-     border: 1px solid royalblue;
+   
 }
 
 section { 
     grid-area: section; 
     background-color:#e8e8e8;
-    border: 1px solid royalblue;
+   
 }
 
 
@@ -38,29 +38,27 @@ h2 {
 }
 
 
-.container {
-    
-    display: flex;
-    flex-wrap: wrap;                /* Permitir que las tarjetas se apilen */
-    justify-content: space-between;
-    margin-top: -15px;
-    padding: 20px;
+.sensor-container {
+  display: grid;
+  grid-template-columns: repeat(2, 100%); /* Dos columnas */
+  grid-gap: 20px; /* Espaciado entre los sensores */
+  padding: 10px;
+  background-color: #e6e6e6; /* Fondo gris claro */
+  margin-left: 50px;
 }
 
-.card {
-    background-color: #fff;
-    border-radius: 5px;
-    box-shadow: 0 2px 5px rgba(0, 0, 0, 0.1);
-    padding: 21px;
-    margin-bottom: 20px;
-    width: calc(40% - 20px); /* Ajustar el ancho de las tarjetas */
-    height: 195px;            /* Altura fija */
+.sensor {
+  background-color: white;
+  border-radius: 10px;
+  box-shadow: 0 4px 8px rgba(0, 0, 0, 0.1);
+  padding: 20px;
+  text-align: center;
+  font-weight: bold;
+  font-family: 'Arial', sans-serif;
+  min-width: 200px;
+  min-height: 200px;
 }
 
-.card h2 {
-    margin-bottom: 10px;
-}
-
-.card p {
-    margin: 0;
+.sensor:first-child {
+  border: 2px solid transparent; /* Sin borde morado en esta versión */
 }
