--- a/src/app/components/layout/home/home.component.html
+++ b/src/app/components/layout/home/home.component.html
@@ -1,17 +1,17 @@
 
 <main>
     <content>
-        <div class="container">
-            <div class="card">
+        <div class="sensor-container">
+            <div class="sensor">
                 <h2>Sensor de PH</h2>
             </div>
-            <div class="card">
+            <div class="sensor">
                 <h2>Sensor de O2</h2>
             </div>
-            <div class="card">
+            <div class="sensor">
                 <h2>Sensor de Amoniaco</h2>
             </div>
-            <div class="card">
+            <div class="sensor">
                 <h2>Sensor Temperatura</h2>
             </div>
         </div>
