--- a/src/styles.css
+++ b/src/styles.css
@@ -5,3 +5,5 @@ html, body {
     padding: 0;
     background-color:#e8e8e8;
 }
+html, body { height: 100%; }
+body { margin: 0; font-family: Roboto, "Helvetica Neue", sans-serif; }
