--- a/src/app/components/layout/home/home.component.css
+++ b/src/app/components/layout/home/home.component.css
@@ -1,51 +1,49 @@
 main {
-    box-sizing: border-box;
-    margin: 0%;
-    padding: 0%;
-    display: grid;  
-    grid-template-columns: 1.5fr 1fr 1fr 1fr  1fr;
-    grid-template-areas:
-    "aside header  header  header  header"
-    "aside  section section section section"
-    "aside section  section  section  section";
-    grid-template-rows: 16% 75% 10% ;
-    height:99vh;
+  box-sizing: border-box;
+  margin: 0;
+  padding: 0;
+  display: grid;  
+  grid-template-columns: 1fr 1fr 1fr 1fr 1fr;
+  grid-template-areas:
+      "aside header header header header"
+      "aside section section section section"
+      "aside section section section section";
+  grid-template-rows: 16% 75% 10%;
+  height: 99vh;
 }
 
 header { 
-    grid-area: header; 
-    background-color:#e8e8e8;
-   
- }
+  grid-area: header; 
+  background-color: #e8e8e8;
+  margin-left: 5px;
+}
 
 aside { 
-    grid-area: aside; 
-     background-color: #252525; 
-   
+  grid-area: aside; 
+  background-color: #252525; 
+  width: 102%;
 }
 
 section { 
-    grid-area: section; 
-    background-color:#e8e8e8;
-   
+  grid-area: section; 
+  background-color: #e8e8e8;
 }
-
 
 h2 {
-    margin-top: 0;
-    font-family: "Poppins", sans-serif, bold;
-    font-size: medium;
-    text-align: left;
+  margin-top: 0;
+  font-family: "Poppins", sans-serif;
+  font-size: medium;
+  text-align: left;
 }
-
 
 .sensor-container {
   display: grid;
-  grid-template-columns: repeat(2, 100%); /* Dos columnas */
+  grid-template-columns: repeat(2, 1fr); /* Dos columnas */
   grid-gap: 20px; /* Espaciado entre los sensores */
   padding: 10px;
   background-color: #e6e6e6; /* Fondo gris claro */
-  margin-left: 20px;
+  margin-left: 50px;
+
 }
 
 .sensor {
@@ -55,10 +53,30 @@ h2 {
   padding: 20px;
   font-weight: bold;
   font-family: 'Arial', sans-serif;
-  min-width: 200px;
+  min-width: 470px;
   min-height: 200px;
 }
 
-.sensor:first-child {
-  border: 2px solid transparent; /* Sin borde morado en esta versión */
+/* Media Queries para responsividad */
+@media (max-width: 768px) {
+  main {
+      grid-template-columns: 1fr; /* Una sola columna en pantallas pequeñas */
+      grid-template-areas:
+          "header"
+          "aside"
+          "section";
+  }
+
+  .sensor-container {
+      grid-template-columns: 1fr; /* Una sola columna para los sensores */
+  }
+
+  .sensor {
+      min-width: auto; /* Permitir que el ancho se ajuste automáticamente */
+      min-height: auto; /* Permitir que la altura se ajuste automáticamente */
+  }
+
+  header, aside, section {
+      height: auto; /* Ajustar automáticamente la altura */
+  }
 }
