--- a/src/app/components/layout/home/home.component.html
+++ b/src/app/components/layout/home/home.component.html
@@ -1,33 +1,34 @@
-
 <main>
     <content>
-        <div class="sensor-container">
-            <div class="sensor">
-                <h2>Sensor de PH</h2>
-            </div>
-
-            <div class="sensor">
-                <h2>Sensor de O2 </h2>
-            </div>
-
-            <div class="sensor">
-                <h2>Sensor de Amoniaco</h2>
-            </div>
-
-            <div class="sensor">
-                <h2>Sensor Temperatura</h2>
-            </div>
-            
+      <div class="sensor-container">
+        <div class="sensor">
+          <h2>Sensor de pH</h2>
+          <p>{{ phValue !== null ? phValue + ' pH' : 'No disponible' }}</p>
         </div>
+  
+        <div class="sensor">
+          <h2>Oxígeno disuelto</h2>
+          <p>{{ oxygenDissolved !== null ? oxygenDissolved.toFixed(2) + ' mg/L' : 'No disponible' }}</p>
+        </div>
+  
+        <div class="sensor">
+          <h2>Sensor de Amoniaco</h2>
+         
+        </div>
+  
+        <div class="sensor">
+          <h2>Sensor Temperatura</h2>
+          <p>{{ temperatureValue !== null ? temperatureValue + ' °C' : 'No disponible' }}</p>
+        </div>
+      </div>
     </content>
-
-    <aside >
+  
+    <aside>
       <app-aside></app-aside>
     </aside>
   
-  
     <header>
-        <app-header></app-header>
+      <app-header></app-header>
     </header>
-</main>
+  </main>
   
