--- a/src/app/components/graficos/grafico-ammoniaco/grafico-ammoniaco.component.html
+++ b/src/app/components/graficos/grafico-ammoniaco/grafico-ammoniaco.component.html
@@ -1,1 +1,10 @@
-<p>grafico-ammoniaco works!</p>
+<div class="container" style="color: white;">
+    <h2>Temperatura</h2>
+    <p>{{ temperatureData.length > 0 ? temperatureData[temperatureData.length - 1] + ' °C' : 'No disponible' }}</p>
+    <div style="display: block;">
+      <canvas id="temperatureChart1"></canvas>
+    </div>
+    <!-- Componente de notificación con plantilla personalizada -->
+    <p-toast key="customToast" position="top-right"></p-toast>
+  </div>
+  
