--- a/src/app/components/graficos/grafico-total/grafico-total.component.css
+++ b/src/app/components/graficos/grafico-total/grafico-total.component.css
@@ -1,36 +1,36 @@
-::ng-deep body {
-    background-color:black;
-}
-
-  
-  
 
 
 main {
     display: grid;
     grid-template-columns: 1fr 1fr; /* Dos columnas iguales */
     grid-template-rows: 1fr 1fr;    /* Dos filas iguales */
-    gap: 2px; /* Espacio entre las celdas */
+    gap: 10px; /* Espacio más amplio entre las celdas */
     height: 98vh;
-  }
-  
-  .temp1 {
-    grid-area: 1 / 1 / 2 / 2; /* Primera fila, primera columna */
-    border: 1px solid white;
-  }
-  
-  .temp2 {
-    grid-area: 1 / 2 / 2 / 3; /* Primera fila, segunda columna */
-    border: 1px solid white;
-  }
-  
-  .temp3 {
-    grid-area: 2 / 1 / 3 / 2; /* Segunda fila, primera columna */
-    border: 1px solid white;
-  }
-  
-  .temp4 {
-    grid-area: 2 / 2 / 3 / 3; /* Segunda fila, segunda columna */
-    border: 1px solid white;
-  }
-  
+    padding: 10px; /* Un poco de padding para que no se tope con los bordes */
+    box-sizing: border-box;
+}
+
+.temp1, .temp2, .temp3, .temp4 {
+    border: 2px solid white; /* Bordes más visibles */
+    border-radius: 5px; /* Bordes redondeados para mejorar la estética */
+    padding: 5px;
+    box-sizing: border-box;
+}
+
+.temp1{
+  background-color: black;
+  color: white;
+}
+.temp2{
+  background-color: black;
+  color: white;
+}
+.temp4 {
+    background-color: black; /* Fondo gris oscuro para hacer los gráficos más legibles */
+    color: white; /* Texto blanco para destacar sobre el fondo oscuro */
+}
+
+.temp3 {
+    background-color: black; /* Fondo gris oscuro para hacer los gráficos más legibles */
+    color: white; /* Texto blanco para destacar sobre el fondo oscuro */
+}
