--- a/src/app/components/graficos/grafico-total/grafico-total.component.css
+++ b/src/app/components/graficos/grafico-total/grafico-total.component.css
@@ -6,7 +6,7 @@ main {
     grid-template-rows: 1fr 1fr;    /* Dos filas iguales */
     gap: 10px; /* Espacio más amplio entre las celdas */
     height: 98vh;
-    padding: 10px; /* Un poco de padding para que no se tope con los bordes */
+    padding: 10px; /* Un poco de padding para que no se tope con los borde */
     box-sizing: border-box;
     background-color: black;
 }
