--- a/src/app/components/graficos/grafico-ammoniaco/grafico-ammoniaco.component.html
+++ b/src/app/components/graficos/grafico-ammoniaco/grafico-ammoniaco.component.html
@@ -1,5 +1,5 @@
 <div class="container" style="color: white;">
-    <h2>Temperatura</h2>
+    <h2>Amoniaco</h2>
     <p>{{ temperatureData.length > 0 ? temperatureData[temperatureData.length - 1] + ' °C' : 'No disponible' }}</p>
     <div style="display: block;">
       <canvas id="temperatureChart1"></canvas>
