--- a/src/app/components/layout/header/header.component.css
+++ b/src/app/components/layout/header/header.component.css
@@ -7,7 +7,7 @@ header {
 }
 
 h1 {
-    color: #252525;
+    color: #ffffff;
     margin: 0; /* Elimina márgenes del h1 para un mejor alineamiento */
     font-size: 35px; /* Ajusta el tamaño de la fuente si es necesario */
 }
