--- a/src/app/components/layout/home/home.component.css
+++ b/src/app/components/layout/home/home.component.css
@@ -3,80 +3,33 @@ main {
   margin: 0;
   padding: 0;
   display: grid;  
-  grid-template-columns: 1fr 1fr 1fr 1fr 1fr;
+  grid-template-columns: 1fr 4fr;
+  grid-template-rows: 10% 80% 10%;
   grid-template-areas:
-      "aside header header header header"
-      "aside section section section section"
-      "aside section section section section";
-  grid-template-rows: 16% 75% 10%;
-  height: 99vh;
+      "aside header"
+      "aside section"
+      "aside section";
+  height: 100vh;
 }
 
 header { 
   grid-area: header; 
-  background-color: #e8e8e8;
-  margin-left: 5px;
+  background-color: #252525;
+ /* border: 10px solid rgb(41, 0, 0);*/
 }
 
 aside { 
   grid-area: aside; 
   background-color: #252525; 
-  width: 102%;
+  
+  overflow: hidden; /* Para evitar desbordamiento en aside */
 }
 
 section { 
   grid-area: section; 
-  background-color: #e8e8e8;
-}
-
-h2 {
-  margin-top: 0;
-  font-family: "Poppins", sans-serif;
-  font-size: medium;
-  text-align: left;
-}
-
-.sensor-container {
-  display: grid;
-  grid-template-columns: repeat(2, 1fr); /* Dos columnas */
-  grid-gap: 20px; /* Espaciado entre los sensores */
+  background-color: #252525;
+ 
+  overflow: auto; /* Muestra scroll si el contenido se desborda */
   padding: 10px;
-  background-color: #e6e6e6; /* Fondo gris claro */
-  margin-left: 50px;
-
-}
-
-.sensor {
-  background-color: white;
-  border-radius: 10px;
-  box-shadow: 0 4px 8px rgba(0, 0, 0, 0.1);
-  padding: 20px;
-  font-weight: bold;
-  font-family: 'Arial', sans-serif;
-  min-width: 470px;
-  min-height: 200px;
-}
-
-/* Media Queries para responsividad */
-@media (max-width: 768px) {
-  main {
-      grid-template-columns: 1fr; /* Una sola columna en pantallas pequeñas */
-      grid-template-areas:
-          "header"
-          "aside"
-          "section";
-  }
-
-  .sensor-container {
-      grid-template-columns: 1fr; /* Una sola columna para los sensores */
-  }
-
-  .sensor {
-      min-width: auto; /* Permitir que el ancho se ajuste automáticamente */
-      min-height: auto; /* Permitir que la altura se ajuste automáticamente */
-  }
-
-  header, aside, section {
-      height: auto; /* Ajustar automáticamente la altura */
-  }
+  box-sizing: border-box;
 }
