--- a/src/app/components/datos-total/datos-total.component.css
+++ b/src/app/components/datos-total/datos-total.component.css
@@ -1,7 +1,8 @@
 .sensor-container {
     display: grid;
     grid-template-columns: repeat(2, 1fr); /* Dos columnas */
-    height: 750px;
+    grid-template-rows: repeat(2, 1fr); /* Dos filas iguales */
+    height: 850px;
     grid-gap: 20px; /* Espaciado entre los sensores */
     padding: 10px;
 
@@ -19,4 +20,43 @@
     font-family: 'Arial', sans-serif;
     min-width: 470px;
     min-height: 200px;
+  }
+
+
+  .sensor label {
+    font-weight: normal; /* Cambia el peso de la fuente para los labels */
+    margin-top: 10px;
+    display: block; /* Para que cada label ocupe una línea */
+  }
+  
+  .sensor input {
+    width: calc(100% - 20px); /* Resta el padding del ancho total */
+    padding: 10px; /* Espaciado interno */
+    margin-top: 5px; /* Espacio entre el label y el input */
+    border: 1px solid #ccc; /* Borde gris claro */
+    border-radius: 5px; /* Bordes redondeados */
+    font-size: 16px; /* Tamaño de la fuente */
+    transition: border-color 0.3s; /* Efecto de transición en el borde */
+  }
+  
+  .sensor input:focus {
+    border-color: #007BFF; /* Color del borde al enfocar */
+    outline: none; /* Eliminar el contorno por defecto */
+  }
+  
+  .sensor button {
+    background-color: #007BFF; /* Color de fondo del botón */
+    color: white; /* Color del texto del botón */
+    padding: 10px 15px; /* Espaciado interno */
+    border: none; /* Sin borde */
+    border-radius: 5px; /* Bordes redondeados */
+    cursor: pointer; /* Cambiar cursor al pasar por encima */
+    font-size: 16px; /* Tamaño de la fuente */
+    margin-top: 10px; /* Espacio superior */
+    margin-right: 10px; /* Espacio derecho para el primer botón */
+    transition: background-color 0.3s; /* Efecto de transición en el color de fondo */
+}
+  
+  .sensor button:hover {
+    background-color: #0056b3; /* Color más oscuro al pasar el mouse */
   }
