--- a/src/app/utiles/utiles.component.html
+++ b/src/app/utiles/utiles.component.html
@@ -1,1 +1,64 @@
-<p>utiles works!</p>
+<div class="container">
+    <h1>HERRAMIENTAS UTILIZADAS</h1>
+    
+    <div class="tool-card">
+        <img src="https://www.aranacorp.com/wp-content/uploads/nodemcu-esp32.jpg" alt="ESP32">
+        <div class="tool-info">
+            <p class="tool-title">ESP32: MICROCONTROLADOR</p>
+            <p class="tool-description"><b>Descripcion:</b> Un microcontrolador de bajo costo y alto rendimiento, que incluye conectividad Wi-Fi y Bluetooth. 
+                Es ampliamente utilizado en proyectos de IoT (Internet de las Cosas) y es compatible con el entorno de desarrollo de Arduino.</p>
+            <p class="tool-description"><b>Aplicacion:</b> Se utilizo para controlar sensores y dispositivos, lo que nos permite realizar un monitoreo
+                 remoto de los diferentes datos obtenidos.</p>
+        </div>
+    </div>
+    
+    <div class="tool-card">
+        <img src="chip_image.png" alt="PH45">
+        <div class="tool-info">
+            <p class="tool-title">PH45: SENSOR DE PH</p>
+            <p class="tool-description"><b>Descripcion:</b>Un sensor diseñado para medir el nivel de pH de líquidos, útil para evaluar la acidez o alcalinidad 
+                de una solución. Este tipo de sensor es común en proyectos que requieren monitoreo de calidad del agua.</p>
+            <p class="tool-description"><b>Aplicacion:</b> Se utilizó para monitorear la calidad del agua en un estanque de tilapia</p>
+        </div>
+    </div>
+
+    <div class="tool-card">
+        <img src="chip_image.png" alt="Temperatura">
+        <div class="tool-info">
+            <p class="tool-title">DS18B20 SUMERGIBLE: SENSOR DE TEMPERATURA</p>
+            <p class="tool-description"><b>Descripcion:</b>Un sensor de temperatura digital con encapsulamiento impermeable, ideal para medir temperaturas en 
+                entornos húmedos o directamente en líquidos. Tiene una alta precisión y permite medir desde -55°C a +125°C.</p>
+            <p class="tool-description"><b>Aplicacion:</b> Nos ayuda a monitoriar la temperatura de lso estanques, para poder tener un control ambiental.</p>
+        </div>
+    </div>
+
+    <div class="tool-card">
+        <img src="chip_image.png" alt="PROTOBOARD">
+        <div class="tool-info">
+            <p class="tool-title">PROTOBOARD</p>
+            <p class="tool-description"><b>Descripcion:</b> También conocida como placa de pruebas, es una herramienta utilizada para construir circuitos 
+                electrónicos de forma temporal sin necesidad de soldar. Permite conectar componentes como resistencias, LEDs y microcontroladores,
+                 facilitando la realización de prototipos y experimentos.</p>
+    </div>
+
+
+    <div class="tool-card">
+        <img src="chip_image.png" alt="RESISTENCIA">
+        <div class="tool-info">
+            <p class="tool-title">RESISTENCIA</p>
+            <p class="tool-description"><b>Descripcion:</b> Es un componente electrónico que limita la cantidad de corriente que fluye a través de un circuito.
+                 Se mide en ohmios (Ω) y se utiliza para proteger otros componentes, dividir voltajes o establecer corrientes en circuitos, asegurando un funcionamiento adecuado y 
+                 seguro.</p>
+    </div>
+
+    <div class="tool-card">
+        <img src="chip_image.png" alt="CABLES">
+        <div class="tool-info">
+            <p class="tool-title">CABLES JUMPER</p>
+            <p class="tool-description"><b>Descripcion:</b> También conocida como placa de pruebas, es una herramienta utilizada para construir circuitos 
+                electrónicos de forma temporal sin necesidad de soldar. Permite conectar componentes como resistencias, LEDs y microcontroladores,
+                 facilitando la realización de prototipos y experimentos.</p>
+    </div>
+
+
+</div>
