--- a/src/app/utiles/utiles.component.html
+++ b/src/app/utiles/utiles.component.html
@@ -13,7 +13,7 @@
     </div>
     
     <div class="tool-card">
-        <img src="chip_image.png" alt="PH45">
+        <img src="https://http2.mlstatic.com/D_NQ_NP_677832-MCO70154683651_062023-O.webp" alt="PH45">
         <div class="tool-info">
             <p class="tool-title">PH45: SENSOR DE PH</p>
             <p class="tool-description"><b>Descripcion:</b>Un sensor diseñado para medir el nivel de pH de líquidos, útil para evaluar la acidez o alcalinidad 
@@ -23,42 +23,70 @@
     </div>
 
     <div class="tool-card">
-        <img src="chip_image.png" alt="Temperatura">
         <div class="tool-info">
-            <p class="tool-title">DS18B20 SUMERGIBLE: SENSOR DE TEMPERATURA</p>
-            <p class="tool-description"><b>Descripcion:</b>Un sensor de temperatura digital con encapsulamiento impermeable, ideal para medir temperaturas en 
-                entornos húmedos o directamente en líquidos. Tiene una alta precisión y permite medir desde -55°C a +125°C.</p>
-            <p class="tool-description"><b>Aplicacion:</b> Nos ayuda a monitoriar la temperatura de lso estanques, para poder tener un control ambiental.</p>
+            <p class="tool-title">FORMULA PARA CALCULAR EL OXIGENO DISUELTO</p>
+            <p class="tool-description"> La fórmula para calcular la oxigenación disuelta (OD) en agua se expresa como: </p>
+            <p class="tool-description">OD=(14.6−0.39⋅T+0.008⋅T2)⋅(1+0.02⋅(7−pH))</p>
+                <ul class="tool-description">
+                    <li><b>T: </b>Representa la temperatura del agua en grados Celsius. La relación muestra que el oxígeno disuelto varía con la temperatura; a medida que 
+                        la temperatura aumenta, el OD tiende a disminuir.</li>
+                    <li><b>pH: </b> Indica el nivel de acidez o alcalinidad del agua. Un pH ideal (en este caso, 7) se considera neutro. La fórmula indica que si el pH se 
+                        aleja de este valor, el oxígeno disuelto puede verse afectado, ya que se ajusta el valor de OD basado en la diferencia del pH con respecto a 7.</li>
+                </ul>
         </div>
     </div>
 
     <div class="tool-card">
-        <img src="chip_image.png" alt="PROTOBOARD">
+        <div class="tool-info">
+            <p class="tool-title">FORMULA PARA CALCULAR EL AMONIACO</p>
+            <p class="tool-description"> La fórmula para calcular el amonio en un estanque de peces relaciona la cantidad de peces, la cantidad de comida que se les da y el volumen del agua </p>
+            <p class="tool-description">Amoniaco = (Cantidad de peces * Cantidad de comida * 0.03) / Volumen del agua</p>
+                <ul class="tool-description">
+                    <li><b>Cantidad de peces: </b>Aumenta la producción de desechos, incrementando el amonio.</li>
+                    <li><b>Cantidad de comida: </b>Más alimento genera más desechos; el factor 0.03 estima el porcentaje de comida que se convierte en amonio.</li>
+                    <li><b>Volumen del agua: </b>Diluye el amonio; un volumen menor puede resultar en concentraciones más altas y tóxicas.</li>
+                </ul>
+        </div>
+    </div>
+
+    <div class="tool-card">
+        <img src="https://electronilab.co/wp-content/uploads/2015/04/ds18b20-waterproof.jpg" alt="TEMPERATURA">
+        <div class="tool-info">
+            <p class="tool-title">DS18B20: SENSOR DE TEMPERATURA</p>
+            <p class="tool-description"><b>Descripcion:</b> Un sensor de temperatura digital con encapsulamiento impermeable, ideal para medir temperaturas en entornos húmedos o directamente
+                en líquidos. Tiene una alta precisión y permite medir desde -55°C a +125°C.</p>
+            <p class="tool-description"><b>Aplicacion:</b> Se utilizó para monitorear la temperatura del agua en un estanque de tilapia.</p>
+        </div>
+    </div>
+
+    <div class="tool-card">
+        <img src="https://http2.mlstatic.com/D_NQ_NP_865494-MCO43648318313_102020-O.webp" alt="PROTOBOARD">
         <div class="tool-info">
             <p class="tool-title">PROTOBOARD</p>
             <p class="tool-description"><b>Descripcion:</b> También conocida como placa de pruebas, es una herramienta utilizada para construir circuitos 
                 electrónicos de forma temporal sin necesidad de soldar. Permite conectar componentes como resistencias, LEDs y microcontroladores,
                  facilitando la realización de prototipos y experimentos.</p>
+        </div>
     </div>
-
-
+    
     <div class="tool-card">
-        <img src="chip_image.png" alt="RESISTENCIA">
+        <img src="https://maxitec.vteximg.com.br/arquivos/ids/189640-1000-1000/maxitec-steren-resistencia-de-220-ohm-12-w-r220-12-1.jpg?v=638304341298870000" alt="RESISTENCIA">
         <div class="tool-info">
             <p class="tool-title">RESISTENCIA</p>
-            <p class="tool-description"><b>Descripcion:</b> Es un componente electrónico que limita la cantidad de corriente que fluye a través de un circuito.
-                 Se mide en ohmios (Ω) y se utiliza para proteger otros componentes, dividir voltajes o establecer corrientes en circuitos, asegurando un funcionamiento adecuado y 
-                 seguro.</p>
+            <p class="tool-description"><b>Descripcion:</b>  Es un componente electrónico que limita la cantidad de corriente que fluye a través de un circuito. 
+                Se mide en ohmios (Ω) y se utiliza para proteger otros componentes, dividir voltajes o establecer corrientes en circuitos, asegurando un funcionamiento 
+                adecuado y seguro.</p>
+        </div>
     </div>
-
+    
     <div class="tool-card">
-        <img src="chip_image.png" alt="CABLES">
+        <img src="https://encrypted-tbn0.gstatic.com/images?q=tbn:ANd9GcQAYVRnl8luD5V9D8ii9gY9bym0u_Fk_FBfYg&s" alt="JUMPER">
         <div class="tool-info">
             <p class="tool-title">CABLES JUMPER</p>
-            <p class="tool-description"><b>Descripcion:</b> También conocida como placa de pruebas, es una herramienta utilizada para construir circuitos 
-                electrónicos de forma temporal sin necesidad de soldar. Permite conectar componentes como resistencias, LEDs y microcontroladores,
-                 facilitando la realización de prototipos y experimentos.</p>
-    </div>
+            <p class="tool-description"><b>Descripcion:</b> Son cables flexibles con conectores en ambos extremos que se utilizan para establecer conexiones entre diferentes
+                 puntos en un circuito. Permiten crear conexiones rápidas y temporales en una protoboard o entre componentes, facilitando la modificación y prueba de circuitos.</p>
+        </div>
+    </div> 
 
 
 </div>
