--- a/src/app/utiles/utiles.component.css
+++ b/src/app/utiles/utiles.component.css
@@ -13,12 +13,13 @@ body {
     margin-top: 20px;
     padding: 20px;
     border-radius: 10px;
-    width: 550px;
+    width: 700px;
     text-align: center;
+    margin-left: 155px;
 }
 
 h1 {
-    font-size: 1.5em;
+    font-size: 1.8em;
     font-weight: bold;
     color: #333;
     margin-bottom: 20px;
@@ -55,7 +56,7 @@ h1 {
 }
 
 .tool-description {
-    font-size: 0.9em;
+    font-size: 1.0em;
     color: #666;
     margin-top: 5px;
 }
